--- a/src/layouts/components/HeaderComponent.astro
+++ b/src/layouts/components/HeaderComponent.astro
@@ -3,7 +3,7 @@ import HeaderAvatar from "./HeaderAvatar.astro"
 ---
 
 <!-- 网站标题和头像 -->
-<header class="sticky top-0 bg-white/70 backdrop-blur-lg container mx-auto px-8 py-2 flex items-center justify-between dark:bg-neutral-900/70">
+<header class="sticky top-0 my-8 bg-white/70 backdrop-blur-lg container mx-auto px-8 py-2 flex items-center justify-between dark:bg-neutral-900/70">
      <h1><a href="/">袁某博客</a></h1>
     <HeaderAvatar />
 </header>
