--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -1,3 +1,3 @@
-<div class="prose prose-neutral max-w-none prose-img:rounded-xl prose-a:text-blue-500 dark:prose-invert">
+<div class="prose prose-neutral text-justify max-w-none prose-img:rounded-xl prose-a:text-blue-500 dark:prose-invert">
     <slot />
 </div>
