--- a/src/layouts/components/HeaderComponent.astro
+++ b/src/layouts/components/HeaderComponent.astro
@@ -3,7 +3,24 @@ import HeaderAvatar from "./HeaderAvatar.astro"
 ---
 
 <!-- 网站标题和头像 -->
-<header class="sticky top-0 my-8 bg-white/70 backdrop-blur-lg container mx-auto px-8 py-2 flex items-center justify-between dark:bg-neutral-900/70">
-     <h1><a href="/">袁某博客</a></h1>
+<header class="sticky top-0 mt-8 bg-white/70 backdrop-blur-lg container mx-auto px-8 py-2 flex items-center justify-between dark:bg-neutral-900/70">
+    <h1 class="flex items-center">
+        <a href="/">袁某博客</a>
+        <button id="loading-icon-btn" class="ml-1.5 p-1 rounded-md hover:bg-neutral-200 dark:hover:bg-neutral-800">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-3 animate-spin">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
+            </svg>
+        </button>
+    </h1>
     <HeaderAvatar />
 </header>
+
+<script is:inline>
+    const loading_icon_btn = document.getElementById('loading-icon-btn');
+    window.onload = function(){
+        loading_icon_btn.style.display = "none";
+    }
+    loading_icon_btn.onclick = function(){
+        alert('部分资源正在加载，如字体等。加载慢请不要禁用缓存🫠');
+    }
+</script>
