--- a/src/layouts/components/LoadingCompent.astro
+++ b/src/layouts/components/LoadingCompent.astro
@@ -5,11 +5,11 @@
     </div>
 </div>
 
-<script>
+<script is:inline>
     const isLoad = true;
     const loadTimeOut = setTimeout(function() {
         document.getElementById('loading-layout-tip').style.display = "block";
-    }, 3000);
+    }, 5000);
 
     window.addEventListener('DOMContentLoaded', function(){
         document.getElementById('loading-layout').style.display = "none";
