--- a/src/layouts/components/LoadingCompent.astro
+++ b/src/layouts/components/LoadingCompent.astro
@@ -5,13 +5,13 @@
     </div>
 </div>
 
-<script is:inline>
+<script>
     const loadTimeOut = setTimeout(function() {
         document.getElementById('loading-layout-tip').style.display = "block";
     }, 5000);
 
-    window.addEventListener('DOMContentLoaded', function(){
+    window.addEventListener('DOMContentLoaded', function() {
         clearTimeout(loadTimeOut);
-        document.getElementById('loading-layout').classList.add("hidden");
+        document.getElementById('loading-layout').style.display = "none";
     });
 </script>
