--- a/src/layouts/components/LoadingCompent.astro
+++ b/src/layouts/components/LoadingCompent.astro
@@ -5,7 +5,7 @@
     </div>
 </div>
 
-<script>
+<script is:inline>
     const loadTimeOut = setTimeout(function() {
         document.getElementById('loading-layout-tip').style.display = "block";
     }, 5000);
