更新 BaseLayout.astro

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -48,7 +48,7 @@ const { PageTitle } = Astro.props;
 	}
 
 	body {
-		/*font-family: "zql" ,"Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif; */
+		font-family: "zql" ,"Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif; 
 	}
 </style>
 
