更新 PostLayout.astro

--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "./BaseLayout.astro"
 import PostHeaderComponent from "./components/PostHeaderComponent.astro";
 import FooterComponent from "./components/FooterComponent.astro";
-import Comment from "./components/Comment.astro";
+import Comment from "../components/Comment.astro";
 import MarkdownLayout from "./MarkdownLayout.astro";
 import { formatDate } from "../utils/formatDate";
 
