--- a/src/components/Comment.astro
+++ b/src/components/Comment.astro
@@ -1,5 +1,4 @@
-
-<!-- <div class="giscus"></div>
+<div class="giscus"></div>
 
 <script src="https://giscus.app/client.js"
         data-repo="ymc0182/myblog"
@@ -16,4 +15,4 @@
         data-loading="lazy"
         crossorigin="anonymous"
         async>
-</script> -->
+</script>
