--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,9 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <h1 class="text-3xl font-bold underline">
-        Hello world!
-        </h1>
-    </body>
-</html>
+---
+import BaseLayout from "../layouts/BaseLayout.astro"
+---
+
+<BaseLayout>
+<main class="h-[2000px]">
+123456
+</main>
+</BaseLayout>
