--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,8 +4,23 @@ import { SITE } from "../consts";
 
 <header id="header" class="sticky top-0  ">
     <div class="container mx-auto px-8 py-2">
-        <div class="flex justify-between">
-            <h1><a href="/">{SITE.title}</a></h1>
+        <div class="flex justify-between items-center">
+            <h1 class="flex items-center">
+                <a href="/">{SITE.title}</a>
+                <span id="loadingIcon" class="ml-1.5 p-1 rounded-md hover:bg-neutral-200 dark:hover:bg-neutral-800" onclick=alert('部分资源正在加载...'); role="button">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-3 animate-spin">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
+                    </svg>
+                </span>
+            </h1>
+            <div class="h-8 w-8 rounded-xl overflow-hidden">
+                <img id="avatar" class="w-full h-full aspect-square" loading="lazy" src={SITE.avatar}>
+                <button id="backToTopBtn" class="hidden items-center justify-center w-full h-full rounded-xl bg-neutral-200/70 transition active:scale-95 dark:bg-neutral-800">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
+                    </svg>
+                </button>
+            </div>
         </div>
     </div>
 </header>
@@ -23,15 +38,29 @@ import { SITE } from "../consts";
         'border-transparent',
     ];
     let headerElement = document.getElementById('header');
+    let avatarElement = document.getElementById('avatar');
+    let backToTopBtnElement = document.getElementById('backToTopBtn');
     document.addEventListener('DOMContentLoaded', function(){
         window.addEventListener('scroll', function() {
             if (window.scrollY > 16) {
                 headerElement.classList.add(...stickyHeaderClass);
                 headerElement.classList.remove(...unstickyHeaderClass);
+
+                avatarElement.classList.add('hidden');
+                backToTopBtnElement.classList.add('flex');
+                backToTopBtnElement.classList.remove('hidden');
             } else {
                 headerElement.classList.add(...unstickyHeaderClass);
                 headerElement.classList.remove(...stickyHeaderClass);
+
+                backToTopBtnElement.classList.add('hidden');
+                backToTopBtnElement.classList.remove('flex');
+                avatarElement.classList.remove('hidden');
             }
         });
     });
+
+    window.onload = function(){
+        document.getElementById('loadingIcon').style.display = "none";
+    }
 </script>
