--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,11 @@ import BaseLayout from "../layouts/BaseLayout.astro"
 ---
 
 <BaseLayout>
-<main class="h-[2000px]">
-123456
+<main class="container mx-auto p-8 h-[2000px]">
+    <section>
+        <article>
+            <a href="#" class="hover:text-blue-500">追风筝的人:读书笔记</a>
+        </article>
+    </section>
 </main>
 </BaseLayout>
