--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,7 +19,8 @@ const { title } = Astro.props;
 
         <ViewTransitions  />
     </head>
-    <body ontouchstart="ontouchstart" class="h-full w-full scroll-smooth text-neutral-800 dark:bg-neutral-900 dark:text-neutral-400"></html>
+    <!-- <body ontouchstart="ontouchstart" class="h-full w-full scroll-smooth text-neutral-800 dark:bg-neutral-900 dark:text-neutral-400"> -->
+		<body ontouchstart="ontouchstart" class="h-full w-full scroll-smooth bg-beige/70 text-charcoal dark:bg-charcoal dark:text-beige">
         <Header></Header>
         <slot />
     </body>
