--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 import { SITE } from "../consts";
 import { ViewTransitions } from "astro:transitions";
 
@@ -19,10 +20,10 @@ const { title } = Astro.props;
 
         <ViewTransitions  />
     </head>
-    <!-- <body ontouchstart="ontouchstart" class="h-full w-full scroll-smooth text-neutral-800 dark:bg-neutral-900 dark:text-neutral-400"> -->
-		<body ontouchstart="ontouchstart" class="h-full w-full scroll-smooth bg-beige/70 text-charcoal dark:bg-charcoal dark:text-beige">
-        <Header></Header>
+    <body ontouchstart="ontouchstart" class="h-full w-full scroll-smooth text-neutral-800 dark:bg-neutral-900 dark:text-neutral-400">
+        <Header />
         <slot />
+		<Footer />
     </body>
 </html>
 
