--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import { getCollection } from "astro:content"
-import BaseLayout from "../layouts/BaseLayout.astro"
+import PageLayout from "../layouts/PageLayout.astro"
 import { SITE } from "../consts";
-import { formatDate } from "../utils/formatDate";
+import BlogCard from "../components/BlogCard.astro";
 
 const blog = (await getCollection("blog"))
 .filter(post => !post.data.draft)
@@ -11,15 +11,12 @@ const blog = (await getCollection("blog"))
 
 ---
 
-<BaseLayout>
+<PageLayout>
 <main class="container mx-auto px-8 py-16">
     <section class="space-y-8">
         {blog.map(post => (
-            <article class="flex flex-col">
-                <a href="#" class="hover:text-blue-500">{post.data.title}</a>
-                <time datetime={post.data.date} class="text-xs text-neutral-400 dark:text-neutral-600">{formatDate(post.data.date)}</time>
-            </article>
+            <BlogCard entry={ post } />
         ))}
     </section>
 </main>
-</BaseLayout>
+</PageLayout>
