--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -3,6 +3,7 @@ import PageLayout from "../../layouts/PageLayout.astro"
 import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
 import { formatDate } from "../../utils/formatDate";
+import Comments from "../../components/Comments.astro";
 
 export async function  getStaticPaths (){
     const posts = (await getCollection('blog'))
@@ -22,12 +23,23 @@ const { Content } = await post.render();
 
 <PageLayout title = {post.data.title}>
     <main class="container mx-auto px-8 py-16">
-        <article class="prose prose-post dark:prose-invert">
-            <header class="mb-8">
+        <article class="prose prose-post dark:prose-invert space-y-8">
+            <header>
                 <h1 class="text-2xl mb-2">{post.data.title}</h1>
                 <time datetime={post.data.date.toString()} class="text-sm text-neutral-400 dark:text-neutral-600">{formatDate(post.data.date, true)}</time>
             </header>
             <Content />
         </article>
+
+        <section class="my-16">
+            <div class="flex items-center">
+                <div class="text-xs font-bold text-neutral-300 rounded-full border border-neutral-200 px-2 shrink-0 dark:text-neutral-600 dark:border-neutral-800">End of reading</div>
+                <div class="border-t border-dashed border-neutral-200 w-full dark:border-neutral-800"></div>
+            </div>
+        </section>
+
+        <section>
+            <Comments />
+        </section>
     </main>
 </PageLayout>
