--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -33,7 +33,7 @@ const { Content } = await post.render();
 
         <section class="my-16">
             <div class="flex items-center">
-                <div class="text-xs font-bold text-neutral-300 rounded-full border border-neutral-200 px-2 shrink-0 dark:text-neutral-600 dark:border-neutral-800">End of reading</div>
+                <div class="text-xs text-neutral-300 rounded-full border border-neutral-200 px-2 shrink-0 dark:text-neutral-600 dark:border-neutral-800">End of reading</div>
                 <div class="border-t border-dashed border-neutral-200 w-full dark:border-neutral-800"></div>
             </div>
         </section>
