--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,14 +7,11 @@ const { title } = Astro.props;
 <!doctype html>
 <html lang="zh">
 
-    <head>
-		<Head title = {title}/>
-    </head>
-
+	<Head title = {title}/>
+	
     <body ontouchstart="ontouchstart" class="h-full w-full scroll-smooth text-neutral-800 dark:bg-neutral-900 dark:text-neutral-400">
         <slot />
     </body>
-	
 </html>
 
 <style>
@@ -30,6 +27,7 @@ const { title } = Astro.props;
 	} */
 
 	::-webkit-scrollbar{
+		display: none;
 	}
 
 	body {
