--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ const blog = (await getCollection("blog"))
 ---
 
 <PageLayout>
-<main class="container mx-auto px-8 py-16">
+<main class="container mx-auto p-8">
     <section class="space-y-8">
         {blog.map(post => (
             <BlogCard entry={ post } />
