--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -26,7 +26,7 @@ const { Content } = await post.render();
 
         <article class="prose prose-post dark:prose-invert space-y-8 mb-16">
             <header>
-                <h1 class="text-2xl mb-2">{post.data.title}</h1>
+                <h1 class="text-2xl mb-2" transition:name={post.data.title}>{post.data.title}</h1>
                 <time datetime={post.data.date.toString()} class="text-sm text-neutral-400 dark:text-neutral-600">{formatDate(post.data.date, true)}</time>
             </header>
 
