--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 import { SITE } from "../consts";
 ---
 
-<header id="header" class="sticky top-0  ">
+<header id="header" class="sticky top-0 z-[99999]">
     <div class="container mx-auto px-8 py-2">
         <div class="flex justify-between items-center">
             <h1 class="flex items-center">
