更新 BaseLayout.astro

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -31,6 +31,6 @@ const { title } = Astro.props;
 	}
 
 	body {
-		/*font-family: "zql" ,"Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif; */
+		font-family: "zql" ,"Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif; 
 	}
 </style>
