--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -8,6 +8,8 @@ const { title } = Astro.props;
 
 <BaseLayout title = {title}>
     <Header />
+    <main class="container mx-auto px-8 py-16">
         <slot />
+    </main>
     <Footer />
 </BaseLayout>
