--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -16,6 +16,11 @@ const { title } = Astro.props;
     <!-- <ViewTransitions  /> -->
 
     <script>
+        function init(){
+            updateTheme();
+            window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', updateTheme);
+        }
+
         function updateTheme() {
             if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
                 document.documentElement.classList.add('dark');
@@ -23,7 +28,8 @@ const { title } = Astro.props;
                 document.documentElement.classList.remove('dark');
             }
         }
-        updateTheme();
-        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', updateTheme);
+
+        document.addEventListener('DOMContentLoaded', () => init());
+    document.addEventListener('astro:after-swap', () => init());
     </script>
 </head>
