--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -13,7 +13,7 @@ const { title } = Astro.props;
     <title>{ title && title + " - " }{SITE.title}</title>
     <meta name="description" content={SITE.description}>
 
-    <!-- <ViewTransitions  /> -->
+    <ViewTransitions  />
 
     <script>
         function init(){
