--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -23,17 +23,15 @@ const { Content } = await post.render();
 
 <PageLayout title = {post.data.title}>
 
-    <article class="prose max-w-none prose-post dark:prose-invert mb-16">
+    <article class="prose max-w-none prose-post dark:prose-invert">
         <header class="mb-8">
             <h1 class="text-2xl mb-2" transition:name={post.data.title}>{post.data.title}</h1>
             <time datetime={post.data.date.toString()} class="text-sm text-neutral-500 dark:text-neutral-600">{formatDate(post.data.date, true)}</time>
         </header>
 
-        <section class="mb-16" role="article">
-            <Content />
-        </section>
+        <Content />
 
-        <footer>
+        <footer class="my-16">
             <div class="flex items-center">
                 <div class="text-xs text-neutral-500 rounded-full border border-neutral-400 px-2 shrink-0 dark:text-neutral-600 dark:border-neutral-600">End of reading</div>
                 <div class="border-t border-dashed border-neutral-400 w-full dark:border-neutral-600"></div>
