--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,7 @@ const { title } = Astro.props;
 
 	<Head title = {title}/>
 	
-    <body ontouchstart="ontouchstart" class="h-full w-full scroll-smooth text-neutral-800 dark:bg-neutral-900 dark:text-neutral-400">
+    <body class="h-full w-full scroll-smooth text-neutral-800 dark:bg-neutral-900 dark:text-neutral-400">
         <slot />
     </body>
 </html>
@@ -34,3 +34,7 @@ const { title } = Astro.props;
 		font-family: "zql" ,"Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif; 
 	}
 </style>
+
+<script>
+	document.body.addEventListener('touchstart', () => {}, { passive: true });
+</script>
