--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -36,8 +36,9 @@ const { Content } = await post.render();
                 <div class="text-xs text-neutral-500 rounded-full border border-neutral-400 px-2 shrink-0 dark:text-neutral-600 dark:border-neutral-600">End of reading</div>
                 <div class="border-t border-dashed border-neutral-400 w-full dark:border-neutral-600"></div>
             </div>
-            <div class="text-sm text-neutral-500 dark:text-neutral-600">
+            <div class="text-sm text-justify text-neutral-500 dark:text-neutral-600">
                 <p>如未另行说明，那么本页面中的内容已根据知识共享署名 4.0 许可获得了许可，并且代码示例已根据 Apache 2.0 许可获得了许可。若本文未声明禁止转载，你可以在标明署名和来源的前提下转载这篇文章。</p>
+                {post.data.upDate && <p>最后更新时间 (UTC+8)：<time datetime={post.data.upDate.toString()}>{formatDate(post.data.upDate, true)}</time></p>}
             </div>
         </footer>
     </article>
