--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
         <span class="text-xs text-neutral-100 bg-neutral-700 px-2.5 py-1 rounded-md"><a href="/">C2C Deed</a></span>
         <nav class="flex flex-wrap gap-1.5 text-sm hover:*:text-blue-500">
             <a href="#">进行时</a>
-            <a href="#">友链</a>
+            <a href="/friends">友链</a>
             <a href="#">关于</a>
             <a href="#">留言</a>
         </nav>
