--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,35 +6,11 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="zh">
-
-	<Head title = {title}/>
+    <head>
+        <Head title = {title}/>
+    </head>
 	
     <body class="h-full w-full scroll-smooth text-neutral-800 dark:bg-neutral-900 dark:text-neutral-400">
         <slot />
     </body>
 </html>
-
-<style>
-    @font-face {
-		font-family: 'zql';
-		src: url('../assets/fonts/zql.woff2') format('woff2'),
-			url('../assets/fonts/zql.woff') format('woff');
-		font-display: swap;
-	}
-	/* @font-face {
-		font-family: 'hm';
-		src: url('../assets/fonts/hm.woff2') format('woff2'),
-	} */
-
-	::-webkit-scrollbar{
-		display: none;
-	}
-
-	body {
-		font-family: "zql" ,"Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif; 
-	}
-</style>
-
-<script>
-	document.body.addEventListener('touchstart', () => {}, { passive: true });
-</script>
