--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
 <meta name="generator" content = {Astro.generator} >
 <title>{ title && title + " - " }{SITE.title}</title>
 <meta name="description" content={SITE.description}>
-<link rel='stylesheet' href='https://chinese-fonts-cdn.deno.dev/packages/yozai/dist/Yozai-Regular/result.css' /> 
+<link rel='stylesheet' href='https://chinese-fonts-cdn.deno.dev/packages/jhlst/dist/%E4%BA%AC%E8%8F%AF%E8%80%81%E5%AE%8B%E4%BD%93v2_002/result.css' /> 
 
 <ViewTransitions  />
 
@@ -37,7 +37,7 @@ const { title } = Astro.props;
 
 <style>
     body {
-		font-family: 'Yozai',"Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif; 
+		font-family: 'KingHwa_OldSong',"Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif; 
         font-weight: 400;
 	}
 	/* @import("https://chinese-fonts-cdn.deno.dev/packages/jhlst/dist/%E4%BA%AC%E8%8F%AF%E8%80%81%E5%AE%8B%E4%BD%93v2_002/result.css");
