--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -10,7 +10,7 @@ const { Content } = await postData.render();
 <PageLayout title = {postData.data.title}>
     <article class="prose max-w-none prose-post dark:prose-invert">
         <header class="mb-8">
-            <h1 class="text-2xl mb-2" transition:name={postData.data.title}>{postData.data.title}</h1>
+            <h1 class="text-2xl mb-2" transition:name={postData.slug}>{postData.data.title}</h1>
             <time datetime={postData.data.date.toString()} class="text-sm text-neutral-500 dark:text-neutral-600">{formatDate(postData.data.date, true)}</time>
         </header>
 
