--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,9 +13,9 @@ import { SITE } from "../consts";
                     </svg>
                 </span>
             </h1>
-            <div class="h-8 w-8 rounded-xl overflow-hidden">
+            <div class="h-6 w-6 rounded-lg overflow-hidden">
                 <img id="avatar" class="w-full h-full aspect-square" loading="lazy" alt="avatar" src={SITE.avatar}>
-                <button id="backToTopBtn" class="hidden items-center justify-center w-full h-full rounded-xl bg-neutral-200/70 transition active:scale-95 dark:bg-neutral-800">
+                <button id="backToTopBtn" class="hidden items-center justify-center w-full h-full rounded-lg bg-neutral-200/70 transition active:scale-95 dark:bg-neutral-800">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
                     </svg>
