--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -5,11 +5,9 @@ import { ViewTransitions } from "astro:transitions";
 const { title } = Astro.props;
 ---
 
-
 <meta charset="UTF-8">
 <link rel="icon" type="image/x-icon" href={SITE.avatar}>
-<link rel="alternate" type="application/rss+xml" title={SITE.title} href={new URL("rss.xml", Astro.site)}
-/>
+<link rel="alternate" type="application/rss+xml" title={SITE.title} href={new URL("rss.xml", Astro.site)} />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="generator" content = {Astro.generator} >
 <title>{ title && title + " - " }{SITE.title}</title>
