--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,15 @@
+---
+import { NavLinks } from "../consts";
+
+
+---
+
 <footer class="border-t border-neutral-200/70 dark:border-neutral-800/70">
     <div class="container mx-auto p-8 space-y-4">
         <nav class="flex flex-wrap gap-1.5 text-sm hover:*:text-blue-500">
-            <a href="/friends">友链</a>
-            <a href="/about">关于</a>
-            <a href="/guestbook">留言</a>
+            {NavLinks.map((link) => (
+                <a href={link.url}>{link.name}</a>
+            ))}
         </nav>
         <div class="text-xs text-neutral-500 dark:text-neutral-600">
             <p>Powered By Astro · Designed By Mr.Yuan ♥.</p>
