--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ import { SITE } from "../consts";
         <div class="flex justify-between items-center">
             <h1 class="flex items-center">
                 <a href="/">{SITE.title}</a>
-                <span id="loadingIcon" class="ml-1.5 p-1 rounded-md hover:bg-neutral-200 dark:hover:bg-neutral-800" onclick=alert('部分资源正在加载...'); role="button">
+                <span id="loadingIcon" class="ml-1.5 p-1 rounded-md hover:bg-neutral-400 dark:hover:bg-neutral-600" onclick=alert('部分资源正在加载...'); role="button">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-3 animate-spin">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
                     </svg>
@@ -33,8 +33,6 @@ import { SITE } from "../consts";
         backToTopBtnElement?.addEventListener('click', (event) => scrollToTop(event));
 
         stickyHeader(headerElement, backToTopBtnElement, avatarElement);
-
-        document.getElementById('loadingIcon').style.display = 'none'
     }
 
     function stickyHeader(headerElement, backToTopBtnElement, avatarElement){
@@ -78,5 +76,6 @@ import { SITE } from "../consts";
 
     document.addEventListener('DOMContentLoaded', () => initHeader());
     document.addEventListener('astro:after-swap', () => initHeader());
+    document.addEventListener('astro:page-load', () => document.getElementById('loadingIcon').style.display = 'none');
     document.addEventListener('astro:before-preparation', () => document.getElementById('loadingIcon').style.display = 'block');
 </script>
