--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -9,7 +9,6 @@ const { title } = Astro.props;
 <link rel="icon" type="image/x-icon" href={SITE.avatar}>
 <link rel="alternate" type="application/rss+xml" title={SITE.title} href={new URL("rss.xml", Astro.site)} />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="generator" content = {Astro.generator} >
 <title>{ title && title + " - " }{SITE.title}</title>
 <meta name="description" content={SITE.description}>
 
@@ -37,14 +36,10 @@ const { title } = Astro.props;
 <style>
     @font-face {
 		font-family: 'zql';
-		src: url('../assets/fonts/zql.woff2') format('woff2'),
-			url('../assets/fonts/zql.woff') format('woff');
+		src: url('https://res.jb18.cm/fonts/zql.woff2') format('woff2'),
+			url('https://res.jb18.cm/fonts/zql.woff') format('woff');
 		font-display: swap;
 	}
-	/* @font-face {
-		font-family: 'hm';
-		src: url('../assets/fonts/hm.woff2') format('woff2'),
-	} */
     body {
 		font-family: 'zql',"Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif; 
         font-weight: 400;
